@@ -242,7 +242,7 @@ end
 def_name_to_int("family_to_int", /\A(AF_|PF_)/, "AF_")
 def_name_to_int("socktype_to_int", /\ASOCK_/, "SOCK_")
 def_name_to_int("ipproto_to_int", /\AIPPROTO_/, "IPPROTO_")
-def_name_to_int("level_to_int", /\A(SOL_SOCKET\z|IPPROTO_)/, /\A(SOL_|IPPROTO_)/)
+def_name_to_int("iplevel_to_int", /\A(SOL_SOCKET\z|IPPROTO_)/, /\A(SOL_|IPPROTO_)/)
 def_name_to_int("so_optname_to_int", /\ASO_/, "SO_")
 def_name_to_int("ip_optname_to_int", /\AIP_/, "IP_")
 def_name_to_int("ipv6_optname_to_int", /\AIPV6_/, "IPV6_", "IPPROTO_IPV6")
@@ -255,7 +255,7 @@ def_intern('intern_family',  /\AAF_/)
 def_intern('intern_protocol_family',  /\APF_/)
 def_intern('intern_socktype',  /\ASOCK_/)
 def_intern('intern_ipproto',  /\AIPPROTO_/)
-def_intern('intern_level',  /\A(SOL_SOCKET\z|IPPROTO_)/, /\A(SOL_|IPPROTO_)/)
+def_intern('intern_iplevel',  /\A(SOL_SOCKET\z|IPPROTO_)/, /\A(SOL_|IPPROTO_)/)
 def_intern('intern_so_optname',  /\ASO_/, "SO_")
 def_intern('intern_ip_optname',  /\AIP_/, "IP_")
 def_intern('intern_ipv6_optname',  /\AIPV6_/, "IPV6_")
